--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous"
-        src="https://connect.facebook.net/hu_HU/sdk.js#xfbml=1&version=v21.0"></script>
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
@@ -31,15 +28,23 @@
             </div>
         </div>
     </div>
-    <div class="content">
-        <div class="fb-page" data-href="https://www.facebook.com/franciafurjeszet" data-tabs="timeline" data-width=""
-            data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
-            data-show-facepile="true">
-            <blockquote cite="https://www.facebook.com/franciafurjeszet" class="fb-xfbml-parse-ignore"><a
-                    href="https://www.facebook.com/franciafurjeszet">Francia fürjészet ABDA</a></blockquote>
-        </div>
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">Kezdőlap</a></li>
+            <li><a href="rolunk.html">Rólunk</a></li>
+            <li><a href="termekek.html">Termékek</a></li>
+            <li><a href="contact.html">Elérhetőségek</a></li>
+            <li><a href="impresszum.html">Impresszum</a></li>
+        </ul>
     </div>
+    <div class="content">
+        <iframe src="https://kisalfoldikosar.hu/termelok/francia-eszter-francia-furjeszet-abda-1890" frameborder="0"></iframe>
+    </div>
+    <!--<footer>
+        <a href="index.html">Francia Fürjészet - 2024</a>
+        <a href="sources.html">Sources</a>
+    </footer>-->
+    <script src="scripts.js"></script>
 </body>
-<script src="scripts.js"></script>
 
 </html>
