--- a/about/index.html
+++ b/about/index.html
@@ -5,26 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/index.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <title>Francia Fürjészet</title>
+    <title>Elérhetőségek - Francia Fürjészet</title>
 </head>
 
 <body>
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
-                <img src="img/fejlec.png" alt="Francia Fürjészet">
+                <img src="../img/fejlec.png" alt="Francia Fürjészet">
             </div>
             <div class="pelda-container">
                 <div class="pelda">
-                    <img src="img/img1.jpg" alt="Francia Fürjészet">
+                    <img src="../img/img1.jpg" alt="Francia Fürjészet">
                 </div>
                 <div class="pelda">
-                    <img src="img/img2.jpg" alt="Francia Fürjészet">
+                    <img src="../img/img2.jpg" alt="Francia Fürjészet">
                 </div>
                 <div class="pelda">
-                    <img src="img/img3.jpg" alt="Francia Fürjészet">
+                    <img src="../img/img3.jpg" alt="Francia Fürjészet">
                 </div>
             </div>
         </div>
@@ -38,7 +37,7 @@
         </ul>
     </div>
     <div class="content">
-        <iframe src="https://kisalfoldikosar.hu/termelok/francia-eszter-francia-furjeszet-abda-1890" frameborder="0"></iframe>
+       
     </div>
     <script src="/scripts/scripts.js"></script>
     <script src="/scripts/mobileredirect.js"></script>
