--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/index.css">
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/stylesmobile.css">
+    <link rel="stylesheet" href=../styles/indexmobile.css">
+
     <title>Francia Fürjészet</title>
 </head>
 
@@ -14,17 +14,8 @@
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
-                <img src="img/fejlec.png" alt="Francia Fürjészet">
+                <img src="../img/fejlec.png" alt="Francia Fürjészet">
             </div>
-            <div class="pelda-container">
-                <div class="pelda">
-                    <img src="img/img1.jpg" alt="Francia Fürjészet">
-                </div>
-                <div class="pelda">
-                    <img src="img/img2.jpg" alt="Francia Fürjészet">
-                </div>
-                <div class="pelda">
-                    <img src="img/img3.jpg" alt="Francia Fürjészet">
                 </div>
             </div>
         </div>
@@ -41,7 +32,7 @@
         <iframe src="https://kisalfoldikosar.hu/termelok/francia-eszter-francia-furjeszet-abda-1890" frameborder="0"></iframe>
     </div>
     <script src="/scripts/scripts.js"></script>
-    <script src="/scripts/mobileredirect.js"></script>
+    <script src="../scripts/desktopredirect.js"></script>
 </body>
 
 </html>
