--- a/impresszum/index.html
+++ b/impresszum/index.html
@@ -53,5 +53,6 @@
         <li>Web: <a href="https://www.cloudflare.com/">https://www.cloudflare.com/</a></li>
     </ul>
   </div>
+  <script src="/scripts/mobileredirect.js"></script>
 </body>
 </html>
