--- a/mobile/index.html
+++ b/mobile/index.html
@@ -23,9 +23,9 @@
     <div class="menu">
         <ul>
             <li><a href="../">Kezdőlap</a></li>
-            <li><a href="../about/">Rólunk</a></li>
-            <li><a href="../contact/">Elérhetőségek</a></li>
-            <li><a href="../impresszum/">Impresszum</a></li>
+            <li><a href="/about/">Rólunk</a></li>
+            <li><a href="/contact/">Elérhetőségek</a></li>
+            <li><a href="/impresszum/">Impresszum</a></li>
         </ul>
     </div>
     <div class="content">
