Added about page

--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,15 @@
         </ul>
     </div>
     <div class="content">
-       
+        <h2>Rólunk</h2>
+        <p>A Francia Fürjészet Abdán található, a Rákóczi telepen, a Rábca folyó közvetlen közelében. </p>
+        <p> Férjemmel és három gyerekünkkel működtetjük, mindenki kiveszi a részét a munkából. Családi gazdaságunkban
+            2020 óta foglalkozunk fürjekkel. Jelenleg kb. 500 madárkánk van.</p>
+        <p>2021-től árusítjuk a fürjtojást és a belőle készült termékeket. A friss tojást többféleképpen feldolgozzuk.
+            Legnépszerűbb a főtt, pácolt füstölt fürjtojás fűszeres olajban. Készítünk ecetes fürjtojást és tojáskrémet
+            is.
+            Legújabb termékeink a fürjtojással készült aprósütemények.</p>
+        <p>Minden termékünk tartósítószer mentes, hagyományos eljárásokkal dolgozunk.</p>
     </div>
     <script src="/scripts/scripts.js"></script>
     <script src="/scripts/mobileredirect.js"></script>
