--- a/mobile/about/index.html
+++ b/mobile/about/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/stylesmobilealt.css">
     <link rel="stylesheet" href="../../styles/stylesmobile.css">
-    
+
     <title>Francia Fürjészet</title>
 </head>
 
@@ -16,9 +16,9 @@
             <div id="logo">
                 <img src="../../img/fejlec.png" alt="Francia Fürjészet">
             </div>
-                </div>
-            </div>
         </div>
+    </div>
+    </div>
     </div>
     <div class="menu">
         <ul>
@@ -29,7 +29,15 @@
         </ul>
     </div>
     <div class="content">
-
+        <h2>Rólunk</h2>
+        <p>A Francia Fürjészet Abdán található, a Rákóczi telepen, a Rábca folyó közvetlen közelében. </p>
+        <p> Férjemmel és három gyerekünkkel működtetjük, mindenki kiveszi a részét a munkából. Családi gazdaságunkban
+            2020 óta foglalkozunk fürjekkel. Jelenleg kb. 500 madárkánk van.</p>
+        <p>2021-től árusítjuk a fürjtojást és a belőle készült termékeket. A friss tojást többféleképpen feldolgozzuk.
+            Legnépszerűbb a főtt, pácolt füstölt fürjtojás fűszeres olajban. Készítünk ecetes fürjtojást és tojáskrémet
+            is.
+            Legújabb termékeink a fürjtojással készült aprósütemények.</p>
+        <p>Minden termékünk tartósítószer mentes, hagyományos eljárásokkal dolgozunk.</p>
     </div>
     <script src="/scripts/scripts.js"></script>
     <script src="../../scripts/desktopredirect.js"></script>
