--- a/impresszum/index.html
+++ b/impresszum/index.html
@@ -43,15 +43,12 @@
         <li>Telefon: +36 30 542 3031</li>
         <li>E-mail: info@franciafurjeszet.hu</li>
     </ul>
-    <p><strong>Adószám:</strong> 87654321-1-23</p>
-    <p><strong>Őstermelői nyilvántartási szám:</strong> 87654321</p>
     <p><strong>Hatósági felügyeletet ellátó szerv:</strong> Nemzeti Élelmiszerlánc-biztonsági Hivatal (NÉBIH)</p>
-    <p><strong>Tárhelyszolgáltató:</strong></p>
-    <ul>
-        <li>Név: Cloudflare, Inc.</li>
-        <li>Székhely: 101 Townsend Street, San Francisco, CA 94107, USA</li>
-        <li>Web: <a href="https://www.cloudflare.com/">https://www.cloudflare.com/</a></li>
-    </ul>
+    <h2>Tárhelyszolgáltató adatai</h2>
+    <p><strong>Név:</strong>Francia Eszter</p>
+    <p><strong>Cím:</strong> 9151 Abda, Rákóczi telep 15.</p>
+    <p><strong>Kapcsolat:</strong>webmaster@franciafurjeszet.hu</p>
+    <p><strong>Telefon:</strong> +36 30 542 3031</p>
   </div>
   <script src="/scripts/mobileredirect.js"></script>
 </body>
