Added google adsense

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <title>Elérhetőségek - Francia Fürjészet</title>
+    <title>Rólunk - Francia Fürjészet</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
