--- a/mobile/about/index.html
+++ b/mobile/about/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/stylesmobilealt.css">
     <link rel="stylesheet" href="../../styles/stylesmobile.css">
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
+    crossorigin="anonymous"></script>
     <title>Francia Fürjészet</title>
 </head>
 
