--- a/impresszum/index.html
+++ b/impresszum/index.html
@@ -6,6 +6,8 @@
   <title>Impresszum</title>
   <link rel="stylesheet" href="/styles/styles.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="fejlec">
