--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <title>Francia Fürjészet</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
