speeded up mobile redirects

--- a/impresszum/index.html
+++ b/impresszum/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Impresszum</title>
+  <title>Impresszum - Francia Fürjészet</title>
   <link rel="stylesheet" href="/styles/styles.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
      crossorigin="anonymous"></script>
+  <script src="/scripts/mobileredirect.js"></script>
 </head>
 <body>
   <div class="fejlec">
@@ -52,6 +53,5 @@
     <p><strong>Kapcsolat:</strong>webmaster@franciafurjeszet.hu</p>
     <p><strong>Telefon:</strong> +36 30 542 3031</p>
   </div>
-  <script src="/scripts/mobileredirect.js"></script>
 </body>
 </html>
