--- a/mobile/index.html
+++ b/mobile/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/stylesmobile.css">
-    <link rel="stylesheet" href=../styles/indexmobile.css">
+    <link rel="stylesheet" href="../styles/indexmobile.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
      crossorigin="anonymous"></script>
 
     <title>Francia Fürjészet</title>
+    <script src="../scripts/desktopredirect.js"></script>
 </head>
 
 <body>
@@ -34,7 +35,6 @@
         <iframe src="https://kisalfoldikosar.hu/termelok/francia-eszter-francia-furjeszet-abda-1890" frameborder="0"></iframe>
     </div>
     <script src="/scripts/scripts.js"></script>
-    <script src="../scripts/desktopredirect.js"></script>
 </body>
 
 </html>
