--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <title>Rólunk - Francia Fürjészet</title>
+    <meta name="description" content="Francia Fürjészet - Rólunk">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
      crossorigin="anonymous"></script>
     <script src="/scripts/mobileredirect.js"></script>
