--- a/impresszum/index.html
+++ b/impresszum/index.html
@@ -6,6 +6,7 @@
   <title>Impresszum - Francia Fürjészet</title>
   <link rel="stylesheet" href="/styles/styles.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <meta name="description" content="Francia Fürjészet - Impresszum">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
      crossorigin="anonymous"></script>
   <script src="/scripts/mobileredirect.js"></script>
