--- a/mobile/about/index.html
+++ b/mobile/about/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../styles/stylesmobile.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
     crossorigin="anonymous"></script>
+    <meta name="description" content="Francia Fürjészet - Rólunk">
     <title>Francia Fürjészet</title>
     <script src="../../scripts/desktopredirect.js"></script>
 </head>
