--- a/mobile/index.html
+++ b/mobile/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/stylesmobile.css">
     <link rel="stylesheet" href="../styles/indexmobile.css">
+    <meta name="description" content="Francia Fürjészet - Kezdőlap">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
      crossorigin="anonymous"></script>
 
