--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,16 @@
 <html lang="hu">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PKJPVZJH');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/styles.css">
@@ -9,11 +19,16 @@
     <title>Elérhetőségek - Francia Fürjészet</title>
     <meta name="description" content="Francia Fürjészet - Elérhetőségek">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
-     crossorigin="anonymous"></script>
-     <script src="/scripts/mobileredirect.js"></script>
+        crossorigin="anonymous"></script>
+    <meta name=”robots” content="index, follow">
+    <script src="/scripts/mobileredirect.js"></script>
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKJPVZJH" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
@@ -43,7 +58,10 @@
     <div class="content">
         <h2>Elérhetőségeink</h2>
         <p>Cím: <a href="https://maps.app.goo.gl/59XEvRjSZtkYDxrC9">9151 Abda, Rákóczi telep 15.</a></p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.8021046131958!2d17.55448527676416!3d47.688263082334196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476b95837a32ca17%3A0xb3d7104c2896b0cb!2zRnJhbmNpYSBGw7xyasOpc3pldCBBQkRBIGbDvHJqdG9qw6FzIC0gZsO8cmo!5e0!3m2!1shu!2shu!4v1741110662897!5m2!1shu!2shu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.8021046131958!2d17.55448527676416!3d47.688263082334196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476b95837a32ca17%3A0xb3d7104c2896b0cb!2zRnJhbmNpYSBGw7xyasOpc3pldCBBQkRBIGbDvHJqdG9qw6FzIC0gZsO8cmo!5e0!3m2!1shu!2shu!4v1741110662897!5m2!1shu!2shu"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>Telefon: <a href="tel:+36305423031">+36 30 542 3031</a>, <a href="tel:+36306262041">+36 30 626 2041</a></p>
         <p>Email: <a href="mailto:info@franciafurjeszet.hu">info@franciafurjeszet.hu</a></p>
         <p><a href="https://yoursit.ee/franciafurjeszet">Közösségi média</a></p>
