--- a/impresszum/index.html
+++ b/impresszum/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-PKJPVZJH');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Impresszum - Francia Fürjészet</title>
@@ -8,10 +19,16 @@
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <meta name="description" content="Francia Fürjészet - Impresszum">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
+  <meta name=”robots” content="index, follow">
   <script src="/scripts/mobileredirect.js"></script>
 </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKJPVZJH" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="fejlec">
     <div class="fejleckepek">
       <div id="logo">
@@ -36,7 +53,7 @@
       <li><a href="../about/">Rólunk</a></li>
       <li><a href="../contact/">Elérhetőségek</a></li>
       <li><a href="../impresszum/">Impresszum</a></li>
-  </ul>
+    </ul>
   </div>
   <div class="content">
     <h1>Impresszum</h1>
@@ -44,8 +61,8 @@
     <p><strong>Székhely:</strong> 9151 Abda, Rákóczi telep 15.</p>
     <p><strong>Elérhetőségek:</strong></p>
     <ul>
-        <li>Telefon: +36 30 542 3031</li>
-        <li>E-mail: info@franciafurjeszet.hu</li>
+      <li>Telefon: +36 30 542 3031</li>
+      <li>E-mail: info@franciafurjeszet.hu</li>
     </ul>
     <p><strong>Hatósági felügyeletet ellátó szerv:</strong> Nemzeti Élelmiszerlánc-biztonsági Hivatal (NÉBIH)</p>
     <h2>Tárhelyszolgáltató adatai</h2>
@@ -55,4 +72,5 @@
     <p><strong>Telefon:</strong> +36 30 542 3031</p>
   </div>
 </body>
+
 </html>
