--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,27 +2,41 @@
 <html lang="hu">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PKJPVZJH');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/stylesmobile.css">
     <link rel="stylesheet" href="../styles/indexmobile.css">
     <meta name="description" content="Francia Fürjészet - Kezdőlap">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8246723941358292"
-     crossorigin="anonymous"></script>
-
+        crossorigin="anonymous"></script>
+    <meta name=”robots” content="index, follow">
     <title>Francia Fürjészet</title>
     <script src="../scripts/desktopredirect.js"></script>
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKJPVZJH" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
                 <img src="../img/fejlec.png" alt="Francia Fürjészet">
             </div>
-                </div>
-            </div>
         </div>
+    </div>
+    </div>
     </div>
     <div class="menu">
         <ul>
@@ -33,7 +47,8 @@
         </ul>
     </div>
     <div class="content">
-        <iframe src="https://kisalfoldikosar.hu/termelok/francia-eszter-francia-furjeszet-abda-1890" frameborder="0"></iframe>
+        <iframe src="https://kisalfoldikosar.hu/termelok/francia-eszter-francia-furjeszet-abda-1890"
+            frameborder="0"></iframe>
     </div>
     <script src="/scripts/scripts.js"></script>
 </body>
