changed png and jpg to webp

--- a/about/index.html
+++ b/about/index.html
@@ -32,17 +32,17 @@
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
-                <img src="../img/fejlec.png" alt="Francia Fürjészet">
+                <img src="../img/fejlec.webp" alt="Francia Fürjészet">
             </div>
             <div class="pelda-container">
                 <div class="pelda">
-                    <img src="../img/img1.jpg" alt="Francia Fürjészet">
+                    <img src="../img/img1.webp" alt="Francia Fürjészet">
                 </div>
                 <div class="pelda">
-                    <img src="../img/img2.jpg" alt="Francia Fürjészet">
+                    <img src="../img/img2.webp" alt="Francia Fürjészet">
                 </div>
                 <div class="pelda">
-                    <img src="../img/img3.jpg" alt="Francia Fürjészet">
+                    <img src="../img/img3.webp" alt="Francia Fürjészet">
                 </div>
             </div>
         </div>
