--- a/mobile/index.html
+++ b/mobile/index.html
@@ -32,7 +32,7 @@
     <div class="fejlec">
         <div class="fejleckepek">
             <div id="logo">
-                <img src="../img/fejlec.png" alt="Francia Fürjészet">
+                <img src="../img/fejlec.webp" alt="Francia Fürjészet">
             </div>
         </div>
     </div>
